<resources>
    <string name="app_name">JustJava</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="none_coffees">You can\'t order \"none\" coffees!</string>
    <string name="too_many">Too many coffees! We just sold out!</string>
    <string name="add_whipped_cream">Add whipped cream? </string>
    <string name="add_chocolate">Add chocolate? </string>
    <string name="total">Total: $</string>
    <string name="thanks">Thank you!</string>
    <string name="email_subject">JustJava order for </string>

</resources>
