<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demonswaltz.justjava.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAllCaps="true"
            android:text="@string/toppings"/>
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:text="@string/whipped_cream"/>
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:text="@string/chocolate"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAllCaps="true"
            android:text="@string/quantity"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="16dp"
                android:text="-"
                android:onClick="decrement"/>
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="0" />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="16dp"
                android:text="+"
                android:onClick="increment"/>

        </LinearLayout>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This is an order summary"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/order"
            android:onClick="onOrder"/>



    </LinearLayout>


</ScrollView>
